--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.564.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "split-type": "^0.3.4",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
